# ctf_gen

./: .gitignore  CMakeLists.txt  README.md
barectf_test/config/: config.yaml
barectf_test/src/: main.cpp
